Fix overflow

--- a/src/components/Slider.scss
+++ b/src/components/Slider.scss
@@ -3,14 +3,17 @@
   height: 100%;
   background: #fff;
   position: absolute;
-  z-index: 10; 
+  z-index: 10;
+}
+
+.slider-swiper {
+  overflow: hidden;
 }
 
 .slider-wrapper,
 .slide {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 .slider-wrapper {
@@ -20,6 +23,7 @@
 .slide {
   position: relative;
   flex-shrink: 0;
+  overflow: hidden;
 }
 
 .slide-img {
